# nit

./: .gitignore  CLAUDE.md  Cargo.nix  Cargo.toml  README.md  flake.nix  nit.md  rust-toolchain.toml  treefmt.toml
.claude-plugin/: marketplace.json
.claude/skills/land/: SKILL.md
.claude/skills/nit-review/: SKILL.md
.github/workflows/: ci.yml
crates/nit/: Cargo.toml  build.rs
crates/nit-types/: Cargo.toml
crates/nit-types/src/: chains.rs  changes.rs  comments.rs  decisions.rs  diff.rs  enums.rs  error.rs  events.rs  export.rs  fold.rs  graph.rs  health.rs  lib.rs  log.rs  push.rs  repos.rs  tests.rs
crates/nit-wasm/: Cargo.toml
crates/nit-wasm/src/: lib.rs
crates/nit/src/: chain.rs  cli.rs  db.rs  enums.rs  lib.rs  main.rs  server.rs
crates/nit/src/api/: chains.rs  changes.rs  comments.rs  diff.rs  drafts.rs  mod.rs  push.rs  rebase.rs  repos.rs  reviews.rs  state.rs  stream.rs  timer.rs  types.rs  views.rs
crates/nit/src/cli/: client.rs  comment.rs  format.rs  git.rs  lifecycle.rs  log.rs  mod.rs  push.rs  repo.rs  resolve.rs  status.rs  version.rs  wait.rs
crates/nit/src/gitscan/: fixup.rs  fold.rs  identity.rs  mod.rs  objects.rs
crates/nit/src/review/: fold.rs  mod.rs  tests.rs
crates/nit/tests/: api_abandon.rs  api_decisions.rs  api_diff.rs  api_events.rs  api_graph.rs  api_log.rs  api_loop.rs  api_repos.rs  api_review.rs  api_static.rs  api_wait.rs  autosquash_differential.rs  cli_e2e.rs  cli_follow.rs  cli_wait.rs  cli_wait_restart.rs  rebase_interdiff.rs  scan_basic.rs  scan_fixup.rs  scan_lifecycle.rs  scan_rebase.rs
crates/nit/tests/common/: mod.rs
docs/: agent-workflow.md  api.md  architecture.md  data-model.md  design-review-guide.md  dev.md  frontend.md
docs/api/: agent.md  chains.md  changes.md  comments.md  decisions.md  events.md  graph.md  health.md  push.md  repos.md  static.md
plan/: chain-model-refactor.md  change-centric-model.md  reviewer-driven-abandonment.md
plugins/nit/: README.md
plugins/nit/.claude-plugin/: plugin.json
plugins/nit/commands/: fork.md  goal.md  install.md  plan.md
plugins/nit/skills/comment/: SKILL.md
plugins/nit/skills/lifecycle/: SKILL.md
scripts/: e2e.sh  land.sh  screenshots-live.sh
web/: eslint.config.js  index.html  knip.json  package-lock.json  package.json  stylelint.config.js  tsconfig.json  vite-plugin-gen-wasm.ts  vite.config.ts
web/screenshots/: capture.mjs
web/src/: App.tsx  main.tsx  styles.css  test-setup.ts
web/src/api/: client.ts  fixtures.ts  fold.test.ts  fold.ts  stream.test.ts  stream.ts  types.gen.ts  types.ts  verdict.ts
web/src/api/fixtures/: builders.ts  data.ts  index.ts  store.ts  stream.test.ts  stream.ts  synth.test.ts  synth.ts
web/src/components/: ChainNav.test.tsx  ChainNav.tsx  ChainStrip.tsx  ChangeGraph.tsx  CommentEditor.tsx  CommentThread.tsx  Markdown.tsx  ReviewBar.tsx  badges.tsx
web/src/components/diff/: DiffFileView.test.tsx  DiffFileView.tsx  FileRail.tsx
web/src/lib/: collapse.test.ts  collapse.ts  comments.test.ts  comments.ts  confirmDiscard.ts  diffview.test.ts  diffview.ts  graphLayout.test.ts  graphLayout.ts  highlight.test.ts  highlight.ts  repo.ts  scrollspy.test.ts  scrollspy.ts  selection.test.ts  selection.ts  shortcutKey.ts  time.ts  useAutosize.test.tsx  useAutosize.ts  useChangeDetails.ts  useChangeStream.ts  useDrafts.ts  useHunkExpansion.ts  useRowNav.ts
web/src/pages/: ChainPage.tsx  Dashboard.test.tsx  Dashboard.tsx  NotFound.tsx  RepoList.tsx  ReviewPage.events.test.tsx  ReviewPage.test.tsx  ReviewPage.tsx  reviewContext.ts
web/src/styles/: base.css  chrome.css  comments.css  diff.css  graph.css  highlight.css  index.css  review.css  tokens.css
