[workspace]
members = ["crates/nit"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Ratchet: worked through in followup commits — the # Errors/# Panics
# doc backfill and the #[must_use] audit are their own batches. Remove
# each allow with the commit that fixes its warnings.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Fires on deliberately parallel names (change1/change2, draft_b/draft_c).
similar_names = "allow"
