[package]
name = "nit-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for the shared nit change fold"

[lints]
workspace = true

[lib]
# A cdylib for wasm-bindgen; the crate is only ever built for wasm32.
crate-type = ["cdylib"]

[dependencies]
nit-types = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
# Must match flake.nix's pinned wasm-bindgen-cli exactly: a version skew
# between the macro and the CLI produces JS glue that panics at init.
wasm-bindgen = "=0.2.121"
