[package]
name = "nit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Commit-level code review for AI coding agents"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.20", default-features = false }
jiff = "0.2"
rusqlite = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3.3.0", default-features = false, features = ["json"] }

[dev-dependencies]
tempfile = "3"
