[package]
name = "nit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Commit-level code review for AI coding agents"

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-broadcast = "0.7"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
git2 = { version = "0.20", default-features = false }
jiff = "0.2"
rusqlite = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-stream = "0.1"
tower = { version = "0.5.3", default-features = false, features = ["util"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = "0.29"
ureq = { version = "3.3.0", default-features = false, features = ["json"] }

[dev-dependencies]
tempfile = "3"
